# GroupWebsite

./: .gitignore  README.md  mkdocs.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yaml  pull-request.yaml  update-gallery.yaml  update-members.yaml  update-publications.yaml
docs/: gallery.md  publications.md
docs/posts/: 2023_fusions_future_in_the_u_s_could_come_down_to_dollars_and_cents.md  2024_SJTU_colloquia_on_AI_for_fusion.md  2024_bravo_dr_rory_conlin.md  2024_egemen_kolemen_wins_ans_award.md  2024_highest_fusion_performance_without_harmful_edge_energy_bursts.md  2024_initiative_aims_to_make_princeton_a_leader_in_ai_accelerated_engineering.md  2024_lithium_experimental_application_platform_leap.md  2024_our_2024_breakthrough_in_nuclear_fusion_with_artificial_intelligence.md  2024_what_does_liquid_metal_have_to_do_with_fusion.md  2024_winning_talk_of_the_pppl_s_2024_research_slam_can_terminator_2_help_save_humanity.md  2025_divertorlets_featured_in_pbs_space_time_fusion_video.md  2025_stabilizing_fusion_reactions_is_a_learning_process_for_ai_systems_and_the_engineers_who_design_them.md  2025_yufan_xu_wins_national_lab_research_slam_award.md
mkdocs_redirects/mkdocs_redirects/: plugin.py
plasmacontrolwebsite/: .htaccess  CNAME  members.md  publications.md
plasmacontrolwebsite/posts/: 2023_andlinger_center_meeting_spotlights_next_decade_technologies_and_design_approaches_for_the_clean_energy_transition.md  2023_leveraging_language_models_for_fusion_energy_research.md  2023_presentation_at_the_fusion_hpc_workshop_by_egemen_kolemen.md  2024_SJTU_colloquia_on_AI_for_fusion.md  2024_cnn_features_our_breakthrough_in_ai_driven_nuclear_fusion.md  2024_congratulations_dr_susan_redmond.md  2024_controlling_fusion_reactor_instability_with_deep_reinforcement_learning_with_aza_jalalvand.md  2024_highest_fusion_performance_without_harmful_edge_energy_bursts.md  2024_initiative_aims_to_make_princeton_a_leader_in_ai_accelerated_engineering.md  2024_lithium_experimental_application_platform_leap.md  2024_our_2024_breakthrough_in_nuclear_fusion_with_artificial_intelligence.md  2024_using_ai_to_wrangle_fusion_energy.md  2024_what_does_liquid_metal_have_to_do_with_fusion.md  2024_winning_talk_of_the_pppl_s_2024_research_slam_can_terminator_2_help_save_humanity.md  2025_divertorlets_featured_in_pbs_space_time_fusion_video.md  2025_yigit_elmacioglu_wins_ossfe_best_student_talk_award.md  2025_yufan_xu_wins_national_lab_research_slam_award.md  luc_harbers_sigma_xi_award.md  private_sector_advances_nuclear_fusion_with_ai.md
plasmacontrolwebsite/research/: index.md
src/: gallery.md  index.md  media.md  members.md  publications.md
src/posts/: SJTU_colloquia_on_AI-for_fusion.md  ai_approach_elevates_plasma_performance_and_stability_across_fusion_devices.md  (+7 more)
(+49 files in other folders)
